--- a/assets/resources/styles/less/modules/_about.less
+++ b/assets/resources/styles/less/modules/_about.less
@@ -4442,6 +4442,20 @@
 }
 
 @media screen and (max-width: 991px) {
+  .home-sec .about-us-images{
+    transform: none !important;
+    width: 100%;
+  }
+  .home-sec .about-us-content {
+    margin-left: 19px;
+    margin-top: 0%;
+}
+#services {
+  padding: 0rem 1rem !important;
+}
+.accordion-list li.open .cont {
+  max-height: 435px !important;
+}
   .dharan .hro-img {
     display: inherit;
     position: block;
@@ -4590,7 +4604,7 @@
   }
 
   .client-section .container {
-    width: 90%;
+    width: 100%;
   }
 
   .client-section .container .parh {
