--- a/assets/resources/styles/less/modules/_contact.less
+++ b/assets/resources/styles/less/modules/_contact.less
@@ -1047,9 +1047,9 @@
     }
 
     .lets {
-        height: 55vh;
+        height: 45vh;
         padding: 30px 12px;
-        margin-top: 10%;
+        margin-top: 17%;
 
         .flex-row {
             P {
@@ -1072,10 +1072,13 @@
 
     .contact-right .welcome-heading h1 {
         text-transform: uppercase;
-        font-size: 77px;
-        line-height: 75px;
-        margin-bottom: 52px;
+        font-size: 50px;
+        line-height: 55px;
+        margin-bottom: 52px
+    px
+    ;
         color: #000;
+        margin-top: 18%;
     }
 
     .contact-inner .enform_wrapper .enform_footer {
@@ -1095,7 +1098,7 @@
     .contact-left-img ul li {
         position: relative;
         padding-left: 0;
-        margin: 0 0 73px;
+        margin: 0 0 40px;
         display: block;
     }
 
@@ -1112,12 +1115,23 @@
         position: relative;
         z-index: 1;
         padding: 0 20px;
-        margin-top: 30%;
+        margin-top: 12%;
     }
 
     .contact-left-img ul li:before {
         display: none;
     }
+    .submit-btn {
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        position: relative;
+        padding: 1.4rem 2.3rem;
+        cursor: pointer;
+        font-family: 'NeueHaasDisplay-me';
+        font-size: 1.2rem;
+        line-height: 1;
+        font-weight: 400;}
 }
 
 
