--- a/assets/resources/styles/less/modules/_footer.less
+++ b/assets/resources/styles/less/modules/_footer.less
@@ -43,11 +43,11 @@
         content: '';
         position: absolute;
         width: 0%;
-        height: 4px;
+        height: 2px;
         background-image: linear-gradient(49deg, #2d4de0 0, #9f71f0 30%, #fc6277 58%, #060461 95%);
         animation: gradient 2s ease infinite;
         animation-direction: alternate;
-        bottom: 0px;
+        bottom: -5px;
         left: 0;
         transition: 0.5s all ease-in-out;
 
@@ -358,8 +358,7 @@
     padding-top: 20%;
   }
   #footer {
-    padding-top: 2vh;
-margin-top: 20%;
+    padding-top: 20%;
     .footer-flex {
       display: flex;
       margin-top: 8%;
