--- a/assets/resources/styles/less/modules/_header.less
+++ b/assets/resources/styles/less/modules/_header.less
@@ -1111,7 +1111,11 @@ header {
 		bottom: 19vh;
 	}
 }
-
+@media screen and (max-width:991px) {
+	.header-widgets {
+		right: 23px !important;
+	}
+}
 @media screen and (max-width:767px) {
 
 
