--- a/assets/resources/styles/less/modules/_hero-section.less
+++ b/assets/resources/styles/less/modules/_hero-section.less
@@ -1501,7 +1501,265 @@
 .w-hde {
     display: none;
 }
+@media screen and (max-width:820px){
+    .ht-cursor {
+        display: none;
+    }
 
+    .container_hero {
+        z-index: 10;
+        width: 100vw;
+        height: 100vh;
+        overflow: hidden;
+        position: relative;
+        // background: #0b131a;
+
+    }
+
+    .container_word_change_t {
+        -webkit-backdrop-filter: blur(15px) !important;
+        backdrop-filter: blur(15px) !important;
+        display: none;
+        opacity: 0;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        width: 100vw;
+        height: 100vh;
+        position: absolute;
+        z-index: 12 !important;
+        background: #fff;
+        overflow: hidden;
+
+        .container_word_change_t_content {
+            -webkit-backdrop-filter: blur(15px) !important;
+            backdrop-filter: blur(15px) !important;
+            opacity: 1;
+            z-index: 13;
+            position: relative;
+            top: 50%;
+            transform: translateY(-50%);
+            bottom: 0;
+            width: 100%;
+            text-align: center;
+            font-size: 8.6vw;
+        }
+
+        .we {
+            padding-right: 5px;
+            display: inline-block;
+            opacity: 0;
+            letter-spacing: 2px;
+            font-family: 'NeueHaasDisplay-me';
+        }
+
+        .make {
+            padding-right: 5px;
+            display: inline-block;
+            opacity: 0;
+            letter-spacing: 2px;
+            font-family: 'NeueHaasDisplay-me';
+        }
+
+        .digital {
+            padding-right: 5px;
+            display: inline-block;
+            opacity: 0;
+            letter-spacing: 2px;
+            font-family: 'NeueHaasDisplay-me';
+        }
+
+        .brand {
+            padding-right: 5px;
+            display: inline-block;
+            opacity: 0;
+            letter-spacing: 2px;
+            position: relative;
+            font-family: 'NeueHaasDisplay-me';
+        }
+
+        .experince {
+            padding-right: 5px;
+            display: inline-block;
+            opacity: 0;
+            letter-spacing: 2px;
+            position: relative;
+            font-family: 'NeueHaasDisplay-me';
+        }
+
+    }
+
+    .transition_to_lapi {
+        opacity: 0;
+        z-index: 59 !important;
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        top: 0;
+        right: 0;
+        width: 100vw;
+        height: 100vh;
+        content: "";
+    }
+
+    // .transition_to_lapi {
+    //     background-color: #000000;
+    // }
+    .container_hero_content {
+        z-index: 11;
+        position: relative;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center;
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
+        justify-content: center;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+        flex-direction: column;
+        z-index: 12;
+        height: 100%;
+        text-align: center;
+
+        #enigma-svg {
+            width: 80vw;
+            fill: currentColor;
+            overflow: visible;
+            z-index: 9;
+
+            .st0 {
+                enable-background: new;
+            }
+
+            .st1 {
+                fill: #808080;
+            }
+
+            .st2 {
+                fill: #8B8B8B;
+            }
+
+            .st3 {
+                fill: #939393;
+            }
+
+            .st4 {
+                fill: #878787;
+            }
+
+            .st5 {
+                fill: #AAAAAA;
+            }
+
+            .st6 {
+                clip-path: url(#SVGID_2_);
+            }
+
+            .st7 {
+                clip-path: url(#SVGID_6_);
+            }
+
+            .st8 {
+                clip-path: url(#SVGID_10_);
+            }
+
+            .st9 {
+                clip-path: url(#SVGID_14_);
+            }
+
+            .st10 {
+                clip-path: url(#SVGID_18_);
+            }
+
+            .st11 {
+                clip-path: url(#SVGID_22_);
+            }
+
+            .st12 {
+                clip-path: url(#SVGID_26_);
+            }
+
+            .st13 {
+                clip-path: url(#SVGID_30_);
+            }
+
+            .st14 {
+                clip-path: url(#SVGID_34_);
+            }
+
+            .st15 {
+                clip-path: url(#SVGID_38_);
+            }
+
+            .st16 {
+                clip-path: url(#SVGID_42_);
+            }
+
+            .st17 {
+                fill: #8C8C8C;
+            }
+
+            .st18 {
+                clip-path: url(#SVGID_46_);
+            }
+
+            #e {
+                transform: scale(8) translate(-58px, -123px);
+
+            }
+
+            #n {
+                transform: scale(4) translate(-107px, -643px);
+            }
+
+            #i {
+                transform: scale(2.9) translate(-160px, 613px);
+            }
+
+            #g {
+                transform: scale(2.9) translate(-240px, -727px);
+            }
+
+            #m {
+                transform: scale(2.7) translate(-230px, -757px);
+            }
+
+            #a {
+                transform: scale(3.5) translate(-546px, 469px);
+            }
+        }
+        .small_heading {
+            position: relative;
+            left: 0;
+            right: 0;
+            top: -1.5vh;
+            bottom: auto;
+            font-size: 1.5em;
+            line-height: 1.5;
+            font-weight: normal;
+            font-family: 'Ageo';
+            color: #ffffff;
+            letter-spacing: 0.20em;
+            padding: 0 10px;
+            opacity: 0;
+        }
+}
+.works__inner {
+    padding: 0px 0px !important;
+    height: 100vh;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    .works__hero__line{
+        font-size: 7.1em;
+    }
+}
+}
 @media screen and (max-width:767px) {
     .mobl {
         display: block;
