--- a/assets/resources/styles/less/modules/_portfolio.less
+++ b/assets/resources/styles/less/modules/_portfolio.less
@@ -1023,6 +1023,7 @@ span.ac-sign {
     display: block;
     position: relative;
     float: left;
+    opacity: 1 !important;
 }
 
 .single-image img {
@@ -2638,6 +2639,17 @@ ul.product-tags li a {
 }
 
 @media screen and (max-width:767px) {
+    .wrapper-full{
+        margin-bottom: 0;
+    }
+    .section-p .h {
+        font-size: 1.3em;
+        line-height: 36px;
+        margin-left: 0px;
+        font-family: 'Ageo';
+        letter-spacing: 0em;
+        color: #444;
+    }
     #work-sction .pr-list {
         display: block;
         padding: 10px 0px 80px 0px;
