--- a/assets/resources/styles/less/modules/_preloader.less
+++ b/assets/resources/styles/less/modules/_preloader.less
@@ -228,8 +228,15 @@
     transform: translate(-10%, 10%);
   }
 }
-
-
+@media screen and (max-width: 991px) {
+.apl-count .apl-num {
+  display: block;
+  overflow: hidden;
+  float: left;
+  height: 394px;
+  margin-left: -15px;
+}
+}
 
 @media only screen and (min-device-width: 320px) and (max-device-width: 812px) {
   .init-load {
