--- a/assets/resources/styles/less/modules/_services.less
+++ b/assets/resources/styles/less/modules/_services.less
@@ -2161,7 +2161,15 @@ section.horizontal .animation-wrap.to-left {
       }
     }
   }
-
+  .ser-hero .top-h .h1-r {
+    text-align: end;
+}
+.dark-footer .footer-flex {
+  border-top: 1px solid #fff !important;
+}
+.ser-hero .top-h {
+  padding: 0px 9px;
+}
   .services-s .flex-con .fle {
     width: 100%;
   }
@@ -2194,7 +2202,7 @@ section.horizontal .animation-wrap.to-left {
   }
 
   .works__inner {
-    padding: 0px 10px;
+    padding: 0px 0px;
     height: 100vh;
     display: flex;
 
@@ -2276,21 +2284,21 @@ section.horizontal .animation-wrap.to-left {
     }
 
     .accordion-list li.open .cont {
-      max-height: 475px;
+      max-height: 558px;
       padding-bottom: 20px;
       -webkit-transition: 0.4s all ease-in-out;
       transition: 0.4s all ease-in-out;
     }
 
     .accordion-list .cont .en-btn_send {
-      font-size: 0.6em;
+      font-size: 0.8em;
     }
 
     .accordion-list .cont .en-form-submit {
       text-align: left;
       margin-bottom: 10%;
       margin-top: 7px;
-      margin-right: 120px;
+      margin-right: 87px;
     }
 
     .accordion-container {
@@ -2351,9 +2359,12 @@ section.horizontal .animation-wrap.to-left {
   }
 
   .scroll-sec2 .container {
-    width: 90%;
+    width: 100%;
   }
-
+  .details-f .cont p {
+    line-height: 1.8;
+    letter-spacing: 1px;
+}
   .scroll-sec2 .back-text {
     top: -6px;
   }
@@ -2373,13 +2384,15 @@ section.horizontal .animation-wrap.to-left {
     letter-spacing: 4px;
     font-family: "NeueHaasDisplay-me";
   }
-
+  .ser-two {
+    padding: 50px 4vw;
+}
   .details-f .cont {
     width: 100%;
     padding-right: 0;
   }
 
-  .details-f .cont p spline_p {
+  .details-f .cont p .spline_p {
     font-family: "Ageo";
     line-height: 1.8;
     letter-spacing: 2px;
@@ -2527,8 +2540,24 @@ section.horizontal .animation-wrap.to-left {
 
   .ser-two .item {
     width: 100%;
+    padding: 44px 50px;
   }
-
+  .ser-two .E-second .bo-h {
+    padding-right: 0%;
+}
+.service-points .container {
+  width: 100%;
+}
+.service-points .container .pointrs-se .left-content {
+  margin-right: 0;
+}
+  .ser-two .bo-h {
+    font-size: 1.1em;
+    padding-right: 0%;
+}
+.ser-two .s img{
+  display: none;
+}
   .ser-two .item h2 {
     font-size: 1.3em;
     line-height: 1.2;
