--- a/assets/resources/styles/css/page.css
+++ b/assets/resources/styles/css/page.css
@@ -1574,6 +1574,15 @@ html.is-ready .c-header_title_line {
     transform: translate(-10%, 10%);
   }
 }
+@media screen and (max-width: 991px) {
+  .apl-count .apl-num {
+    display: block;
+    overflow: hidden;
+    float: left;
+    height: 394px;
+    margin-left: -15px;
+  }
+}
 @media only screen and (min-device-width: 320px) and (max-device-width: 812px) {
   .init-load .inner {
     left: 1vw;
@@ -2583,6 +2592,11 @@ header {
     right: -1rem;
     font-family: 'Ageo';
     bottom: 19vh;
+  }
+}
+@media screen and (max-width: 991px) {
+  .header-widgets {
+    right: 23px !important;
   }
 }
 @media screen and (max-width: 767px) {
@@ -4030,6 +4044,241 @@ header {
 }
 .w-hde {
   display: none;
+}
+@media screen and (max-width: 820px) {
+  .ht-cursor {
+    display: none;
+  }
+  .container_hero {
+    z-index: 10;
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+    position: relative;
+  }
+  .container_word_change_t {
+    -webkit-backdrop-filter: blur(15px) !important;
+    backdrop-filter: blur(15px) !important;
+    display: none;
+    opacity: 0;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100vw;
+    height: 100vh;
+    position: absolute;
+    z-index: 12 !important;
+    background: #fff;
+    overflow: hidden;
+  }
+  .container_word_change_t .container_word_change_t_content {
+    -webkit-backdrop-filter: blur(15px) !important;
+    backdrop-filter: blur(15px) !important;
+    opacity: 1;
+    z-index: 13;
+    position: relative;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+            transform: translateY(-50%);
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    font-size: 8.6vw;
+  }
+  .container_word_change_t .we {
+    padding-right: 5px;
+    display: inline-block;
+    opacity: 0;
+    letter-spacing: 2px;
+    font-family: 'NeueHaasDisplay-me';
+  }
+  .container_word_change_t .make {
+    padding-right: 5px;
+    display: inline-block;
+    opacity: 0;
+    letter-spacing: 2px;
+    font-family: 'NeueHaasDisplay-me';
+  }
+  .container_word_change_t .digital {
+    padding-right: 5px;
+    display: inline-block;
+    opacity: 0;
+    letter-spacing: 2px;
+    font-family: 'NeueHaasDisplay-me';
+  }
+  .container_word_change_t .brand {
+    padding-right: 5px;
+    display: inline-block;
+    opacity: 0;
+    letter-spacing: 2px;
+    position: relative;
+    font-family: 'NeueHaasDisplay-me';
+  }
+  .container_word_change_t .experince {
+    padding-right: 5px;
+    display: inline-block;
+    opacity: 0;
+    letter-spacing: 2px;
+    position: relative;
+    font-family: 'NeueHaasDisplay-me';
+  }
+  .transition_to_lapi {
+    opacity: 0;
+    z-index: 59 !important;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    top: 0;
+    right: 0;
+    width: 100vw;
+    height: 100vh;
+    content: "";
+  }
+  .container_hero_content {
+    z-index: 11;
+    position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    z-index: 12;
+    height: 100%;
+    text-align: center;
+  }
+  .container_hero_content #enigma-svg {
+    width: 80vw;
+    fill: currentColor;
+    overflow: visible;
+    z-index: 9;
+  }
+  .container_hero_content #enigma-svg .st0 {
+    enable-background: new;
+  }
+  .container_hero_content #enigma-svg .st1 {
+    fill: #808080;
+  }
+  .container_hero_content #enigma-svg .st2 {
+    fill: #8B8B8B;
+  }
+  .container_hero_content #enigma-svg .st3 {
+    fill: #939393;
+  }
+  .container_hero_content #enigma-svg .st4 {
+    fill: #878787;
+  }
+  .container_hero_content #enigma-svg .st5 {
+    fill: #AAAAAA;
+  }
+  .container_hero_content #enigma-svg .st6 {
+    -webkit-clip-path: url(#SVGID_2_);
+            clip-path: url(#SVGID_2_);
+  }
+  .container_hero_content #enigma-svg .st7 {
+    -webkit-clip-path: url(#SVGID_6_);
+            clip-path: url(#SVGID_6_);
+  }
+  .container_hero_content #enigma-svg .st8 {
+    -webkit-clip-path: url(#SVGID_10_);
+            clip-path: url(#SVGID_10_);
+  }
+  .container_hero_content #enigma-svg .st9 {
+    -webkit-clip-path: url(#SVGID_14_);
+            clip-path: url(#SVGID_14_);
+  }
+  .container_hero_content #enigma-svg .st10 {
+    -webkit-clip-path: url(#SVGID_18_);
+            clip-path: url(#SVGID_18_);
+  }
+  .container_hero_content #enigma-svg .st11 {
+    -webkit-clip-path: url(#SVGID_22_);
+            clip-path: url(#SVGID_22_);
+  }
+  .container_hero_content #enigma-svg .st12 {
+    -webkit-clip-path: url(#SVGID_26_);
+            clip-path: url(#SVGID_26_);
+  }
+  .container_hero_content #enigma-svg .st13 {
+    -webkit-clip-path: url(#SVGID_30_);
+            clip-path: url(#SVGID_30_);
+  }
+  .container_hero_content #enigma-svg .st14 {
+    -webkit-clip-path: url(#SVGID_34_);
+            clip-path: url(#SVGID_34_);
+  }
+  .container_hero_content #enigma-svg .st15 {
+    -webkit-clip-path: url(#SVGID_38_);
+            clip-path: url(#SVGID_38_);
+  }
+  .container_hero_content #enigma-svg .st16 {
+    -webkit-clip-path: url(#SVGID_42_);
+            clip-path: url(#SVGID_42_);
+  }
+  .container_hero_content #enigma-svg .st17 {
+    fill: #8C8C8C;
+  }
+  .container_hero_content #enigma-svg .st18 {
+    -webkit-clip-path: url(#SVGID_46_);
+            clip-path: url(#SVGID_46_);
+  }
+  .container_hero_content #enigma-svg #e {
+    -webkit-transform: scale(8) translate(-58px, -123px);
+            transform: scale(8) translate(-58px, -123px);
+  }
+  .container_hero_content #enigma-svg #n {
+    -webkit-transform: scale(4) translate(-107px, -643px);
+            transform: scale(4) translate(-107px, -643px);
+  }
+  .container_hero_content #enigma-svg #i {
+    -webkit-transform: scale(2.9) translate(-160px, 613px);
+            transform: scale(2.9) translate(-160px, 613px);
+  }
+  .container_hero_content #enigma-svg #g {
+    -webkit-transform: scale(2.9) translate(-240px, -727px);
+            transform: scale(2.9) translate(-240px, -727px);
+  }
+  .container_hero_content #enigma-svg #m {
+    -webkit-transform: scale(2.7) translate(-230px, -757px);
+            transform: scale(2.7) translate(-230px, -757px);
+  }
+  .container_hero_content #enigma-svg #a {
+    -webkit-transform: scale(3.5) translate(-546px, 469px);
+            transform: scale(3.5) translate(-546px, 469px);
+  }
+  .container_hero_content .small_heading {
+    position: relative;
+    left: 0;
+    right: 0;
+    top: -1.5vh;
+    bottom: auto;
+    font-size: 1.5em;
+    line-height: 1.5;
+    font-weight: normal;
+    font-family: 'Ageo';
+    color: #ffffff;
+    letter-spacing: 0.2em;
+    padding: 0 10px;
+    opacity: 0;
+  }
+  .works__inner {
+    padding: 0px 0px !important;
+    height: 100vh;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .works__inner .works__hero__line {
+    font-size: 7.1em;
+  }
 }
 @media screen and (max-width: 767px) {
   .mobl {
@@ -8611,6 +8860,21 @@ header {
   }
 }
 @media screen and (max-width: 991px) {
+  .home-sec .about-us-images {
+    -webkit-transform: none !important;
+            transform: none !important;
+    width: 100%;
+  }
+  .home-sec .about-us-content {
+    margin-left: 19px;
+    margin-top: 0%;
+  }
+  #services {
+    padding: 0rem 1rem !important;
+  }
+  .accordion-list li.open .cont {
+    max-height: 435px !important;
+  }
   .dharan .hro-img {
     display: inherit;
     position: block;
@@ -8741,7 +9005,7 @@ header {
     font-size: 7.8em;
   }
   .client-section .container {
-    width: 90%;
+    width: 100%;
   }
   .client-section .container .parh {
     font-size: 1.6em;
@@ -12093,6 +12357,15 @@ section.horizontal .animation-wrap.to-left {
     letter-spacing: 1px;
     font-size: 12px;
   }
+  .ser-hero .top-h .h1-r {
+    text-align: end;
+  }
+  .dark-footer .footer-flex {
+    border-top: 1px solid #fff !important;
+  }
+  .ser-hero .top-h {
+    padding: 0px 9px;
+  }
   .services-s .flex-con .fle {
     width: 100%;
   }
@@ -12119,7 +12392,7 @@ section.horizontal .animation-wrap.to-left {
         flex-wrap: wrap;
   }
   .works__inner {
-    padding: 0px 10px;
+    padding: 0px 0px;
     height: 100vh;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -12191,19 +12464,19 @@ section.horizontal .animation-wrap.to-left {
     color: #444;
   }
   #services .accordion-list li.open .cont {
-    max-height: 475px;
+    max-height: 558px;
     padding-bottom: 20px;
     -webkit-transition: 0.4s all ease-in-out;
     transition: 0.4s all ease-in-out;
   }
   #services .accordion-list .cont .en-btn_send {
-    font-size: 0.6em;
+    font-size: 0.8em;
   }
   #services .accordion-list .cont .en-form-submit {
     text-align: left;
     margin-bottom: 10%;
     margin-top: 7px;
-    margin-right: 120px;
+    margin-right: 87px;
   }
   #services .accordion-container {
     margin: 0px 0px;
@@ -12250,7 +12523,11 @@ section.horizontal .animation-wrap.to-left {
     width: 90%;
   }
   .scroll-sec2 .container {
-    width: 90%;
+    width: 100%;
+  }
+  .details-f .cont p {
+    line-height: 1.8;
+    letter-spacing: 1px;
   }
   .scroll-sec2 .back-text {
     top: -6px;
@@ -12269,11 +12546,14 @@ section.horizontal .animation-wrap.to-left {
     letter-spacing: 4px;
     font-family: "NeueHaasDisplay-me";
   }
+  .ser-two {
+    padding: 50px 4vw;
+  }
   .details-f .cont {
     width: 100%;
     padding-right: 0;
   }
-  .details-f .cont p spline_p {
+  .details-f .cont p .spline_p {
     font-family: "Ageo";
     line-height: 1.8;
     letter-spacing: 2px;
@@ -12407,6 +12687,23 @@ section.horizontal .animation-wrap.to-left {
   }
   .ser-two .item {
     width: 100%;
+    padding: 44px 50px;
+  }
+  .ser-two .E-second .bo-h {
+    padding-right: 0%;
+  }
+  .service-points .container {
+    width: 100%;
+  }
+  .service-points .container .pointrs-se .left-content {
+    margin-right: 0;
+  }
+  .ser-two .bo-h {
+    font-size: 1.1em;
+    padding-right: 0%;
+  }
+  .ser-two .s img {
+    display: none;
   }
   .ser-two .item h2 {
     font-size: 1.3em;
@@ -13301,6 +13598,7 @@ span.ac-sign {
   display: block;
   position: relative;
   float: left;
+  opacity: 1 !important;
 }
 .single-image img {
   width: 100%;
@@ -14591,6 +14889,17 @@ ul.product-tags li a {
   }
 }
 @media screen and (max-width: 767px) {
+  .wrapper-full {
+    margin-bottom: 0;
+  }
+  .section-p .h {
+    font-size: 1.3em;
+    line-height: 36px;
+    margin-left: 0px;
+    font-family: 'Ageo';
+    letter-spacing: 0em;
+    color: #444;
+  }
   #work-sction .pr-list {
     display: block;
     padding: 10px 0px 80px 0px;
@@ -16183,13 +16492,13 @@ ul.product-tags li a {
   content: '';
   position: absolute;
   width: 0%;
-  height: 4px;
+  height: 2px;
   background-image: linear-gradient(49deg, #2d4de0 0, #9f71f0 30%, #fc6277 58%, #060461 95%);
   -webkit-animation: gradient 2s ease infinite;
           animation: gradient 2s ease infinite;
   -webkit-animation-direction: alternate;
           animation-direction: alternate;
-  bottom: 0px;
+  bottom: -5px;
   left: 0;
   -webkit-transition: 0.5s all ease-in-out;
   transition: 0.5s all ease-in-out;
@@ -16465,8 +16774,7 @@ ul.product-tags li a {
     padding-top: 20%;
   }
   #footer {
-    padding-top: 2vh;
-    margin-top: 20%;
+    padding-top: 20%;
   }
   #footer .footer-flex {
     display: -webkit-box;
@@ -18489,9 +18797,9 @@ ul.aw-cats {
     display: none;
   }
   .lets {
-    height: 55vh;
+    height: 45vh;
     padding: 30px 12px;
-    margin-top: 10%;
+    margin-top: 17%;
   }
   .lets .flex-row P {
     text-align: right;
@@ -18509,10 +18817,13 @@ ul.aw-cats {
   }
   .contact-right .welcome-heading h1 {
     text-transform: uppercase;
-    font-size: 77px;
-    line-height: 75px;
-    margin-bottom: 52px;
+    font-size: 50px;
+    line-height: 55px;
+    margin-bottom: 52px
+    px
+    ;
     color: #000;
+    margin-top: 18%;
   }
   .contact-inner .enform_wrapper .enform_footer {
     margin: 66px 0 0;
@@ -18528,7 +18839,7 @@ ul.aw-cats {
   .contact-left-img ul li {
     position: relative;
     padding-left: 0;
-    margin: 0 0 73px;
+    margin: 0 0 40px;
     display: block;
   }
   .contact-left-img ul li h6 {
@@ -18543,10 +18854,28 @@ ul.aw-cats {
     position: relative;
     z-index: 1;
     padding: 0 20px;
-    margin-top: 30%;
+    margin-top: 12%;
   }
   .contact-left-img ul li:before {
     display: none;
+  }
+  .submit-btn {
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    position: relative;
+    padding: 1.4rem 2.3rem;
+    cursor: pointer;
+    font-family: 'NeueHaasDisplay-me';
+    font-size: 1.2rem;
+    line-height: 1;
+    font-weight: 400;
   }
 }
 .wrapper-small {
