--- a/assets/resources/styles/less/modules/_about.less
+++ b/assets/resources/styles/less/modules/_about.less
@@ -4454,7 +4454,7 @@
   padding: 0rem 1rem !important;
 }
 .accordion-list li.open .cont {
-  max-height: 435px !important;
+  max-height: 435px ;
 }
   .dharan .hro-img {
     display: inherit;
