--- a/assets/resources/styles/less/modules/_about.less
+++ b/assets/resources/styles/less/modules/_about.less
@@ -4442,20 +4442,20 @@
 }
 
 @media screen and (max-width: 991px) {
-  .home-sec .about-us-images{
+  .home-sec .about-us-images {
     transform: none !important;
     width: 100%;
   }
   .home-sec .about-us-content {
     margin-left: 19px;
     margin-top: 0%;
-}
-#services {
-  padding: 0rem 1rem !important;
-}
-.accordion-list li.open .cont {
-  max-height: 435px ;
-}
+  }
+  #services {
+    padding: 0rem 1rem !important;
+  }
+  .accordion-list li.open .cont {
+    max-height: 435px;
+  }
   .dharan .hro-img {
     display: inherit;
     position: block;
@@ -4540,6 +4540,24 @@
 
 .teams-slider {
   display: none;
+}
+
+@media screen and (max-width: 991px) {
+  .about-us-image {
+    margin-top: 15%;
+  }
+  .client-section .grid-logo .logo-item {
+    width: 50%;
+    padding: 15px;
+    border-right: none;
+    position: relative;
+  }
+  .client-section .grid-logo .bottom-border::after {
+    background: none;
+  }
+  .client-section .grid-logo .logo-item img {
+    width: 75%;
+  }
 }
 
 @media only screen and (min-device-width: 320px) and (max-device-width: 812px) {
@@ -4806,7 +4824,7 @@
   .mobile-container {
     overflow: hidden;
     width: 100%;
-    max-width: 375px;
+    max-width: 375px !important;
     height: 657px;
     border-radius: 26px;
     // background-color: @base__color-5;
@@ -5315,13 +5333,13 @@
       text-align: center;
       margin-bottom: 20%;
       margin-top: 40px;
-      margin-right: 10px;
+      margin-right: 10px !important;
 
       .en-btn_send {
         color: #fff;
         font-family: "NeueHaasDisplay-roman";
         text-transform: uppercase;
-        font-size: 1.4em;
+        font-size: 1.4em !important;
       }
     }
 
@@ -5451,7 +5469,7 @@
 
         .content {
           position: relative;
-          padding: 0px 30px;
+          padding: 0px 30px !important;
           .transition(all, 0.35s);
           opacity: 0;
           height: 100%;
@@ -5466,13 +5484,13 @@
             h2 {
               position: absolute;
               bottom: 17px;
-              font-size: 46px;
+              font-size: 46px !important;
               display: flex;
               color: #ffffff;
               font-family: "NeueHaasDisplay-me";
               flex-wrap: wrap;
               line-height: 1;
-              left: -11px;
+              left: -11px !important;
               letter-spacing: 2px;
               opacity: 0;
               transform: translateY(50px);
@@ -6074,6 +6092,9 @@
     width: 100%;
     height: auto;
     flex-direction: column-reverse;
+  }
+  section.section-container {
+    margin-top: 60px;
   }
   .content__section {
     width: 100%;
