--- a/assets/resources/styles/less/modules/_footer.less
+++ b/assets/resources/styles/less/modules/_footer.less
@@ -10,7 +10,6 @@
     padding: 0px 6em;
     position: relative;
     width: 100%;
-
   }
 
   .top-f {
@@ -18,19 +17,25 @@
 
     h3 {
       font-size: 2.2em;
-      font-family: 'NeueHaasDisplay-Roman';
+      font-family: "NeueHaasDisplay-Roman";
       letter-spacing: 3px;
-      color: #1A1A1A;
+      color: #1a1a1a;
       text-align: center;
     }
 
     .great-cta {
       position: relative;
       font-size: 5em;
-      font-family: 'NeueHaasDisplay-me';
+      font-family: "NeueHaasDisplay-me";
       letter-spacing: 2px;
       margin-bottom: 5%;
-      background-image: linear-gradient(49deg, #2d4de0 0, #9f71f0 30%, #fc6277 58%, #f8ef6f 95%);
+      background-image: linear-gradient(
+        49deg,
+        #2d4de0 0,
+        #9f71f0 30%,
+        #fc6277 58%,
+        #f8ef6f 95%
+      );
       -webkit-text-fill-color: transparent;
       -text-fill-color: transparent;
       -webkit-background-clip: text;
@@ -40,17 +45,22 @@
       animation-direction: alternate;
 
       &:after {
-        content: '';
+        content: "";
         position: absolute;
         width: 0%;
         height: 2px;
-        background-image: linear-gradient(49deg, #2d4de0 0, #9f71f0 30%, #fc6277 58%, #060461 95%);
+        background-image: linear-gradient(
+          49deg,
+          #2d4de0 0,
+          #9f71f0 30%,
+          #fc6277 58%,
+          #060461 95%
+        );
         animation: gradient 2s ease infinite;
         animation-direction: alternate;
         bottom: -5px;
         left: 0;
         transition: 0.5s all ease-in-out;
-
       }
 
       &:hover:after {
@@ -60,14 +70,12 @@
 
     @keyframes gradient {
       0% {
-        background-position: 0 0
+        background-position: 0 0;
       }
 
       100% {
-        background-position: 0 100%
+        background-position: 0 100%;
       }
-
-
     }
 
     .arow {
@@ -107,7 +115,15 @@
         margin-left: 13px;
 
         .insta:hover {
-          background-image: linear-gradient(45deg, #405de6, #5851db, #833ab4, #c13584, #e1306c, #fd1d1d);
+          background-image: linear-gradient(
+            45deg,
+            #405de6,
+            #5851db,
+            #833ab4,
+            #c13584,
+            #e1306c,
+            #fd1d1d
+          );
           background-repeat: repeat-x;
           -webkit-background-clip: text;
           background-clip: text;
@@ -121,7 +137,7 @@
         }
 
         .face:hover {
-          background-image: linear-gradient(120deg, #4267B2, #4267B2);
+          background-image: linear-gradient(120deg, #4267b2, #4267b2);
           background-repeat: repeat-x;
           -webkit-background-clip: text;
           background-clip: text;
@@ -129,13 +145,21 @@
           transition: 0.3s ease-in-out;
 
           svg {
-            fill: #4267B2;
+            fill: #4267b2;
             transition: 0.3s ease-in-out;
           }
         }
 
         .lin:hover {
-          background-image: linear-gradient(45deg, #0077b5, #0077b5, #0077b5, #0077b5, #0077b5, #0077b5);
+          background-image: linear-gradient(
+            45deg,
+            #0077b5,
+            #0077b5,
+            #0077b5,
+            #0077b5,
+            #0077b5,
+            #0077b5
+          );
           background-repeat: repeat-x;
           -webkit-background-clip: text;
           background-clip: text;
@@ -149,7 +173,14 @@
         }
 
         .twit:hover {
-          background-image: linear-gradient(45deg, #1DA1F2, #1DA1F2, #1DA1F2, #1DA1F2, #1DA1F2);
+          background-image: linear-gradient(
+            45deg,
+            #1da1f2,
+            #1da1f2,
+            #1da1f2,
+            #1da1f2,
+            #1da1f2
+          );
           background-repeat: repeat-x;
           -webkit-background-clip: text;
           background-clip: text;
@@ -157,17 +188,17 @@
           transition: 0.3s ease-in-out;
 
           svg {
-            fill: #1DA1F2;
+            fill: #1da1f2;
             transition: 0.3s ease-in-out;
           }
         }
 
         .bhn:hover {
-          color: #0053FF;
+          color: #0053ff;
           transition: 0.3s ease-in-out;
 
           svg {
-            fill: #1DA1F2;
+            fill: #1da1f2;
             transition: 0.3s ease-in-out;
           }
         }
@@ -206,7 +237,7 @@
       font-size: 16px;
       color: #666;
       text-align: center;
-      font-family: 'NeueHaasDisplay-light';
+      font-family: "NeueHaasDisplay-light";
       letter-spacing: 2px;
     }
   }
@@ -220,7 +251,7 @@
     a {
       text-transform: uppercase;
       letter-spacing: 1.5px;
-      font-family: 'NeueHaasDisplay-Roman';
+      font-family: "NeueHaasDisplay-Roman";
       font-size: 20px;
       overflow: hidden;
     }
@@ -230,18 +261,18 @@
       display: inline-block;
       height: 63px;
       overflow: hidden;
-      opacity: .3;
+      opacity: 0.3;
       cursor: pointer;
       font-size: 14px;
       font-weight: 300;
       line-height: 64px;
-      letter-spacing: .00464286em;
+      letter-spacing: 0.00464286em;
       text-align: center;
       text-decoration: none;
-      -webkit-transition: opacity .2s;
-      -o-transition: opacity .2s;
-      -moz-transition: opacity .2s;
-      transition: opacity .2s;
+      -webkit-transition: opacity 0.2s;
+      -o-transition: opacity 0.2s;
+      -moz-transition: opacity 0.2s;
+      transition: opacity 0.2s;
     }
 
     .cb-outro-social-item {
@@ -262,7 +293,7 @@
           position: relative;
           z-index: 1;
           color: transparent;
-          transition: transform 1s cubic-bezier(.19, 1, .22, 1);
+          transition: transform 1s cubic-bezier(0.19, 1, 0.22, 1);
         }
 
         span:after,
@@ -285,12 +316,17 @@
           -ms-transform-origin: right bottom;
           -o-transform-origin: right bottom;
           transform-origin: right bottom;
-          -webkit-transition: -webkit-transform 2s cubic-bezier(.19, 1, .22, 1);
-          transition: -webkit-transform 2s cubic-bezier(.19, 1, .22, 1);
-          -o-transition: -o-transform 2s cubic-bezier(.19, 1, .22, 1);
-          -moz-transition: transform 2s cubic-bezier(.19, 1, .22, 1), -moz-transform 2s cubic-bezier(.19, 1, .22, 1);
-          transition: transform 2s cubic-bezier(.19, 1, .22, 1);
-          transition: transform 2s cubic-bezier(.19, 1, .22, 1), -webkit-transform 2s cubic-bezier(.19, 1, .22, 1), -moz-transform 2s cubic-bezier(.19, 1, .22, 1), -o-transform 2s cubic-bezier(.19, 1, .22, 1);
+          -webkit-transition: -webkit-transform 2s
+            cubic-bezier(0.19, 1, 0.22, 1);
+          transition: -webkit-transform 2s cubic-bezier(0.19, 1, 0.22, 1);
+          -o-transition: -o-transform 2s cubic-bezier(0.19, 1, 0.22, 1);
+          -moz-transition: transform 2s cubic-bezier(0.19, 1, 0.22, 1),
+            -moz-transform 2s cubic-bezier(0.19, 1, 0.22, 1);
+          transition: transform 2s cubic-bezier(0.19, 1, 0.22, 1);
+          transition: transform 2s cubic-bezier(0.19, 1, 0.22, 1),
+            -webkit-transform 2s cubic-bezier(0.19, 1, 0.22, 1),
+            -moz-transform 2s cubic-bezier(0.19, 1, 0.22, 1),
+            -o-transform 2s cubic-bezier(0.19, 1, 0.22, 1);
         }
 
         span:after {
@@ -305,12 +341,17 @@
           -ms-transform-origin: left top;
           -o-transform-origin: left top;
           transform-origin: left top;
-          -webkit-transition: -webkit-transform 2s cubic-bezier(.19, 1, .22, 1);
-          transition: -webkit-transform 2s cubic-bezier(.19, 1, .22, 1);
-          -o-transition: -o-transform 2s cubic-bezier(.19, 1, .22, 1);
-          -moz-transition: transform 2s cubic-bezier(.19, 1, .22, 1), -moz-transform 2s cubic-bezier(.19, 1, .22, 1);
-          transition: transform 2s cubic-bezier(.19, 1, .22, 1);
-          transition: transform 2s cubic-bezier(.19, 1, .22, 1), -webkit-transform 2s cubic-bezier(.19, 1, .22, 1), -moz-transform 2s cubic-bezier(.19, 1, .22, 1), -o-transform 2s cubic-bezier(.19, 1, .22, 1);
+          -webkit-transition: -webkit-transform 2s
+            cubic-bezier(0.19, 1, 0.22, 1);
+          transition: -webkit-transform 2s cubic-bezier(0.19, 1, 0.22, 1);
+          -o-transition: -o-transform 2s cubic-bezier(0.19, 1, 0.22, 1);
+          -moz-transition: transform 2s cubic-bezier(0.19, 1, 0.22, 1),
+            -moz-transform 2s cubic-bezier(0.19, 1, 0.22, 1);
+          transition: transform 2s cubic-bezier(0.19, 1, 0.22, 1);
+          transition: transform 2s cubic-bezier(0.19, 1, 0.22, 1),
+            -webkit-transform 2s cubic-bezier(0.19, 1, 0.22, 1),
+            -moz-transform 2s cubic-bezier(0.19, 1, 0.22, 1),
+            -o-transform 2s cubic-bezier(0.19, 1, 0.22, 1);
         }
 
         &:hover {
@@ -342,7 +383,6 @@
         }
       }
     }
-
   }
 }
 
@@ -353,7 +393,7 @@
 }
 
 @media only screen and (min-device-width: 320px) and (max-device-width: 812px) {
-  #footer.dark-footer{
+  #footer.dark-footer {
     background: #000 !important;
     padding-top: 20%;
   }
@@ -378,7 +418,7 @@
         .great-cta {
           position: relative;
           font-size: 2.7em;
-          font-family: 'NeueHaasDisplay-roman';
+          font-family: "NeueHaasDisplay-roman";
           letter-spacing: 0px;
           margin-bottom: 5%;
           left: -15px;
@@ -394,7 +434,7 @@
 
     .footer-right {
       display: flex;
-flex-wrap: wrap;
+      flex-wrap: wrap;
       .cb-outro-social-item {
         height: auto;
         line-height: 1.7;
@@ -402,17 +442,26 @@ flex-wrap: wrap;
         margin-right: 0;
         text-align: center;
         width: 29%;
+        padding: 0px !important;
+        font-size: 14px !important;
       }
+    }
 
+    .botom ul li {
+      padding: 0 !important;
     }
 
     .botom {
       justify-content: center;
-      padding-right: 0;
+      padding-right: 30px;
     }
 
     .bottom-footer p {
       font-size: 0.8em;
+    }
+    .so {
+      width: 26px !important;
+      height: 20px !important;
     }
   }
 
@@ -430,12 +479,11 @@ flex-wrap: wrap;
 
 .dark-footer {
   background-color: #000 !important;
-  .footer-flex{
+  .footer-flex {
     border-top: 1px solid #fff !important;
   }
   .top-f h3 {
     color: #fff !important;
-
   }
 
   .footer-right .cb-outro-social-item {
@@ -459,10 +507,7 @@ flex-wrap: wrap;
       stroke: rebeccapurple;
       fill: red !important;
     }
-
   }
-
-
 
   .bottom-footer {
     padding: 30px 0;
