--- a/assets/resources/styles/less/modules/_services.less
+++ b/assets/resources/styles/less/modules/_services.less
@@ -253,7 +253,6 @@
   display: block;
 }
 
-
 .accordion-list li {
   position: relative;
 }
@@ -1588,7 +1587,7 @@ section.horizontal .animation-wrap.to-left {
     max-height: 335px;
     padding-bottom: 20px;
     transition: 0.4s all ease-in-out;
-  }  
+  }
   .services-s .image {
     width: 35%;
 
@@ -1751,10 +1750,10 @@ section.horizontal .animation-wrap.to-left {
   }
 }
 @media screen and (max-width: 991px) {
-
-.accordion-list li.open .cont {
-  max-height: 435px ;
-}}
+  .accordion-list li.open .cont {
+    max-height: 435px;
+  }
+}
 .dark {
   .marquees__part {
     -webkit-text-stroke-color: #2b2b2b;
@@ -1937,6 +1936,16 @@ section.horizontal .animation-wrap.to-left {
 }
 
 @media screen and (max-width: 991px) {
+  .service-points .container .point li {
+    font-size: 1.5em;
+    margin-bottom: 20px !important;
+  }
+  .service-points .container .point li::before {
+    top: 10px;
+  }
+  .scroll-sec2 .back-text {
+    top: -63px;
+  }
   .services-s .flex-con .fle {
     width: 100%;
   }
@@ -1970,6 +1979,13 @@ section.horizontal .animation-wrap.to-left {
   }
   .ser-hero .top-h h1 {
     font-size: 6.5em;
+  }
+  .ser-hero .top-h .h1-r {
+    margin-left: 48%;
+  }
+
+  .ser-hero .top-h .mr__right {
+    margin-left: 31%;
   }
   .ser-c .flex-con .right {
     width: 100%;
@@ -2024,6 +2040,9 @@ section.horizontal .animation-wrap.to-left {
 }
 
 @media screen and (max-width: 776px) {
+  .ser-hero .top-h .h1-r6 {
+    margin-left: 28%;
+  }
   .services-s .flex-con .fle h3 {
     font-size: 2.5em;
   }
@@ -2167,13 +2186,13 @@ section.horizontal .animation-wrap.to-left {
   }
   .ser-hero .top-h .h1-r {
     text-align: end;
-}
-.dark-footer .footer-flex {
-  border-top: 1px solid #fff !important;
-}
-.ser-hero .top-h {
-  padding: 0px 9px;
-}
+  }
+  .dark-footer .footer-flex {
+    border-top: 1px solid #fff !important;
+  }
+  .ser-hero .top-h {
+    padding: 0px 9px;
+  }
   .services-s .flex-con .fle {
     width: 100%;
   }
@@ -2368,9 +2387,9 @@ section.horizontal .animation-wrap.to-left {
   .details-f .cont p {
     line-height: 1.8;
     letter-spacing: 1px;
-}
+  }
   .scroll-sec2 .back-text {
-    top: -6px;
+    top: -20px;
   }
 
   .scroll-sec2 .back-text h1 {
@@ -2390,7 +2409,7 @@ section.horizontal .animation-wrap.to-left {
   }
   .ser-two {
     padding: 50px 4vw;
-}
+  }
   .details-f .cont {
     width: 100%;
     padding-right: 0;
@@ -2548,20 +2567,20 @@ section.horizontal .animation-wrap.to-left {
   }
   .ser-two .E-second .bo-h {
     padding-right: 0%;
-}
-.service-points .container {
-  width: 100%;
-}
-.service-points .container .pointrs-se .left-content {
-  margin-right: 0;
-}
+  }
+  .service-points .container {
+    width: 100%;
+  }
+  .service-points .container .pointrs-se .left-content {
+    margin-right: 0;
+  }
   .ser-two .bo-h {
     font-size: 1.1em;
     padding-right: 0%;
-}
-.ser-two .s img{
-  display: none;
-}
+  }
+  .ser-two .s img {
+    display: none;
+  }
   .ser-two .item h2 {
     font-size: 1.3em;
     line-height: 1.2;
