--- a/assets/resources/styles/less/modules/_preloader.less
+++ b/assets/resources/styles/less/modules/_preloader.less
@@ -23,7 +23,13 @@
     overflow: hidden;
 
     span {
-      background-image: linear-gradient(91deg, #2d4de0 0, #9f71f0 30%, #fc6277 58%, #f8ef6f 95%);
+      background-image: linear-gradient(
+        91deg,
+        #2d4de0 0,
+        #9f71f0 30%,
+        #fc6277 58%,
+        #f8ef6f 95%
+      );
       -webkit-text-fill-color: transparent;
       -text-fill-color: transparent;
       -webkit-background-clip: text;
@@ -35,22 +41,22 @@
       line-height: 1;
       animation: gradient 1s ease infinite;
       animation-direction: alternate;
-      font-family: 'Bebas Neue';
+      font-family: "Bebas Neue";
 
       @keyframes gradient {
         0% {
-          background-position: 0 0
+          background-position: 0 0;
         }
 
         100% {
-          background-position: 0 100%
+          background-position: 0 100%;
         }
       }
     }
   }
 
   .percentage {
-    font-family: 'Bebas Neue', cursive;
+    font-family: "Bebas Neue", cursive;
     font-size: 100px;
     line-height: 1.1;
     font-weight: 600;
@@ -63,17 +69,23 @@
 
 .align-b {
   align-items: baseline;
-
 }
 
 .load-text {
-  background-image: linear-gradient(to top, #ffffff 5%, #c7c7c7 15%, #939393 35%, #333333 52%, #000000 75%);
+  background-image: linear-gradient(
+    to top,
+    #ffffff 5%,
+    #c7c7c7 15%,
+    #939393 35%,
+    #333333 52%,
+    #000000 75%
+  );
   background-size: 300% 300%;
   background-attachment: fixed;
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
   animation: gradient 8s ease infinite;
-  font-family: 'NeueHaasDisplay-me';
+  font-family: "NeueHaasDisplay-me";
   transition: 03s all ease-in-out;
 }
 
@@ -122,7 +134,6 @@
 }
 
 @-webkit-keyframes grain {
-
   0%,
   100% {
     -webkit-transform: translate(0, 0);
@@ -176,7 +187,6 @@
 }
 
 @keyframes grain {
-
   0%,
   100% {
     -webkit-transform: translate(0, 0);
@@ -229,13 +239,13 @@
   }
 }
 @media screen and (max-width: 991px) {
-.apl-count .apl-num {
-  display: block;
-  overflow: hidden;
-  float: left;
-  height: 394px;
-  margin-left: -15px;
-}
+  .apl-count .apl-num {
+    display: block;
+    overflow: hidden;
+    float: left;
+    height: 394px !important;
+    margin-left: -15px;
+  }
 }
 
 @media only screen and (min-device-width: 320px) and (max-device-width: 812px) {
@@ -258,6 +268,11 @@
       right: -32px;
     }
   }
+}
 
-
+@media screen and (max-width: 776px) {
+  .apl-count .apl-num {
+    height: 203px !important;
+    margin-left: 0px;
+  }
 }
