--- a/assets/resources/styles/less/modules/_services.less
+++ b/assets/resources/styles/less/modules/_services.less
@@ -61,6 +61,9 @@
   overflow-y: hidden;
   position: relative;
 }
+.black-strock .marquees__part {
+  -webkit-text-stroke-color: #000;
+}
 
 .smm h2 {
   font-size: 58px;
