Tablet Size Responsive Update

--- a/assets/resources/styles/less/modules/_contact.less
+++ b/assets/resources/styles/less/modules/_contact.less
@@ -1140,6 +1140,8 @@ lack-strock .marquees__part {
     margin-right: 0;
     padding: 0 50px;
     font-size: 20px;
+    width: 33.3%;
+    text-align: center;
   }
   .action-icon {
     width: 11%;
