--- a/assets/resources/styles/less/modules/_footer.less
+++ b/assets/resources/styles/less/modules/_footer.less
@@ -392,6 +392,12 @@
   display: block;
 }
 
+@media screen and (max-width: 991px) {
+  #footer {
+    padding-top: 5vh;
+  }
+}
+
 @media only screen and (min-device-width: 320px) and (max-device-width: 812px) {
   #footer.dark-footer {
     background: #000 !important;
