--- a/assets/resources/styles/less/modules/_preloader.less
+++ b/assets/resources/styles/less/modules/_preloader.less
@@ -239,12 +239,8 @@
   }
 }
 @media screen and (max-width: 991px) {
-  .apl-count .apl-num {
-    display: block;
-    overflow: hidden;
-    float: left;
-    height: 394px !important;
-    margin-left: -15px;
+  .apl-count {
+    font-size: 20vh !important;
   }
 }
 
