--- a/assets/resources/styles/css/page.css
+++ b/assets/resources/styles/css/page.css
@@ -1576,12 +1576,8 @@ html.is-ready .c-header_title_line {
   }
 }
 @media screen and (max-width: 991px) {
-  .apl-count .apl-num {
-    display: block;
-    overflow: hidden;
-    float: left;
-    height: 394px !important;
-    margin-left: -15px;
+  .apl-count {
+    font-size: 20vh !important;
   }
 }
 @media only screen and (min-device-width: 320px) and (max-device-width: 812px) {
@@ -1744,7 +1740,7 @@ header {
   --move-initial: calc(-25% + var(--offset));
   --move-final: calc(-50% + var(--offset));
   font-size: 5vw;
-  font-family: 'Bebas Neue';
+  font-family: "Bebas Neue";
 }
 .marquee {
   position: absolute;
@@ -1865,7 +1861,7 @@ header {
   margin-left: auto;
   margin-right: auto;
   height: 100vh;
-  height: calc(var(--vh)*100);
+  height: calc(var(--vh) * 100);
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -1926,7 +1922,7 @@ header {
   position: relative;
   overflow: hidden;
   color: #ffffff;
-  font-family: 'NeueHaasDisplay-me';
+  font-family: "NeueHaasDisplay-me";
 }
 .sub-navlink {
   color: #ffffff;
@@ -2023,7 +2019,7 @@ header {
           transform-origin: 100% 100%;
   display: inline-block;
   color: #fff;
-  font-family: 'NeueHaasDisplay-me';
+  font-family: "NeueHaasDisplay-me";
 }
 @media (max-width: 1023px) {
   .nav-num {
@@ -2086,7 +2082,7 @@ header {
   border-radius: 0;
   text-align: center;
   color: #fff;
-  font-family: 'Ageo';
+  font-family: "Ageo";
   text-decoration: none;
   position: relative;
   display: inline-block;
@@ -2120,7 +2116,7 @@ header {
   bottom: 25%;
   right: 0;
   display: -webkit-box;
-  font-family: 'Ageo';
+  font-family: "Ageo";
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
@@ -2136,7 +2132,7 @@ header {
   line-height: 1.6875em;
   letter-spacing: -0.005625em;
   font-weight: 400;
-  font-family: 'Ageo';
+  font-family: "Ageo";
 }
 .nav__showreel > div .txt--p6 {
   color: #ffffff;
@@ -2188,7 +2184,7 @@ header {
   height: auto;
   line-height: 1;
   opacity: 1;
-  font-family: 'Ageo';
+  font-family: "Ageo";
   text-transform: capitalize;
   text-align: left;
 }
@@ -2304,13 +2300,18 @@ header {
     bottom: 13vh;
   }
 }
+@media screen and (max-width: 991px) {
+  .nav__newsletter-talk > div .buttons .button a {
+    display: none;
+  }
+}
 .nav-second {
   position: absolute;
   text-align: right;
   bottom: 0;
   right: -4rem;
   bottom: 13vh;
-  font-family: 'Ageo';
+  font-family: "Ageo";
   letter-spacing: 3px;
 }
 .quick-clickItem {
@@ -2597,7 +2598,7 @@ header {
     text-align: right;
     bottom: 0;
     right: -1rem;
-    font-family: 'Ageo';
+    font-family: "Ageo";
     bottom: 19vh;
   }
 }
@@ -2613,7 +2614,7 @@ header {
     margin-left: auto;
     margin-right: auto;
     height: 100vh;
-    height: calc(var(--vh)*100);
+    height: calc(var(--vh) * 100);
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
@@ -2644,7 +2645,7 @@ header {
     margin-right: 3rem;
   }
   .nav-container {
-    height: calc(var(--vh)*100);
+    height: calc(var(--vh) * 100);
     width: 100vw;
     overflow-x: hidden;
   }
@@ -2662,7 +2663,7 @@ header {
     bottom: -14.833333vw;
     right: 0;
     display: -webkit-box;
-    font-family: 'Ageo';
+    font-family: "Ageo";
     display: -ms-flexbox;
     display: flex;
     -webkit-box-align: center;
@@ -11835,6 +11836,9 @@ section.horizontal .animation-wrap.to-left {
   transition: all 0.3s ease-in-out;
 }
 @media screen and (max-width: 1920px) {
+  .ipad-ser {
+    display: none;
+  }
   .accordion-list li.open .cont {
     max-height: 335px;
     padding-bottom: 20px;
@@ -11980,8 +11984,55 @@ section.horizontal .animation-wrap.to-left {
   }
 }
 @media screen and (max-width: 991px) {
+  .ser-two {
+    display: none;
+  }
+  .ipad-ser {
+    display: block;
+  }
+  .ser-two .item {
+    padding: 0 0 100px 0px;
+    -webkit-transform: none !important;
+            transform: none !important;
+  }
+  .ser-two .strategy__item {
+    width: 90% !important;
+    padding: 0 0 100px 15px;
+    -webkit-transform: none !important;
+            transform: none !important;
+  }
+  .ser-two .mar-top {
+    margin-top: 0%;
+  }
+  .ser-two .item p {
+    text-align: left;
+    font-size: 20px !important;
+  }
+  .service-points {
+    padding: 15% 0 10% 0;
+  }
   .accordion-list li.open .cont {
     max-height: 435px;
+  }
+  .ser-two {
+    padding: 50px 10vw 0 10vw;
+    margin-bottom: 0;
+  }
+  .ser-two .item::before {
+    font-size: 3em;
+    top: 25px;
+    left: 50px;
+  }
+  .ser-two .item h2 {
+    font-size: 1.5em;
+  }
+  .ser-two .horizontal-sec {
+    margin-top: 20%;
+  }
+  .flex-cen {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
 }
 .dark .marquees__part {
@@ -12235,7 +12286,7 @@ section.horizontal .animation-wrap.to-left {
     width: 50%;
   }
   .ser-two .item {
-    width: 90%;
+    width: 40%;
   }
   .service-points .container .pointrs-se {
     -webkit-box-orient: vertical;
@@ -16867,6 +16918,11 @@ ul.product-tags li a {
   height: 100%;
   display: block;
 }
+@media screen and (max-width: 991px) {
+  #footer {
+    padding-top: 5vh;
+  }
+}
 @media only screen and (min-device-width: 320px) and (max-device-width: 812px) {
   #footer.dark-footer {
     background: #000 !important;
@@ -18887,6 +18943,8 @@ lack-strock .marquees__part {
     margin-right: 0;
     padding: 0 50px;
     font-size: 20px;
+    width: 33.3%;
+    text-align: center;
   }
   .action-icon {
     width: 11%;
@@ -19966,10 +20024,10 @@ body.dark .ar-work-cat,
   z-index: 0;
 }
 .footer .mb-auto {
-  margin-bottom: auto!important;
+  margin-bottom: auto !important;
 }
 .footer .d-block {
-  display: block!important;
+  display: block !important;
 }
 .footer .mt-3 {
   margin-top: 1.875rem !important;
@@ -20014,15 +20072,15 @@ body.dark .ar-work-cat,
   color: transparent;
 }
 .footer .footer__inner .flex-column {
-  -webkit-box-orient: vertical!important;
-  -webkit-box-direction: normal!important;
-      -ms-flex-direction: column!important;
-          flex-direction: column!important;
+  -webkit-box-orient: vertical !important;
+  -webkit-box-direction: normal !important;
+      -ms-flex-direction: column !important;
+          flex-direction: column !important;
 }
 .footer .footer__inner .d-flex {
-  display: -webkit-box!important;
-  display: -ms-flexbox!important;
-  display: flex!important;
+  display: -webkit-box !important;
+  display: -ms-flexbox !important;
+  display: flex !important;
 }
 .footer .footer__inner .bg-light {
   background-color: #f5f5f5 !important;
@@ -20032,8 +20090,8 @@ body.dark .ar-work-cat,
       flex-shrink: 0;
   width: 100%;
   max-width: 100%;
-  padding-right: calc(var(--bs-gutter-x)/2);
-  padding-left: calc(var(--bs-gutter-x)/2);
+  padding-right: calc(var(--bs-gutter-x) / 2);
+  padding-left: calc(var(--bs-gutter-x) / 2);
   margin-top: var(--bs-gutter-y);
 }
 .footer .footer__inner .display-1 {
@@ -20049,9 +20107,9 @@ body.dark .ar-work-cat,
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  margin-top: calc(var(--bs-gutter-y)*-1);
-  margin-right: calc(var(--bs-gutter-x)/-2);
-  margin-left: calc(var(--bs-gutter-x)/-2);
+  margin-top: calc(var(--bs-gutter-y) * -1);
+  margin-right: calc(var(--bs-gutter-x) / -2);
+  margin-left: calc(var(--bs-gutter-x) / -2);
 }
 .footer .footer__inner .container {
   width: 100%;
@@ -20061,7 +20119,7 @@ body.dark .ar-work-cat,
   margin-left: auto;
 }
 .footer .footer__inner .w-100 {
-  width: 100%!important;
+  width: 100% !important;
 }
 .footer .footer__inner .footer-top__bg {
   bottom: 40px;
@@ -20095,8 +20153,8 @@ body.dark .ar-work-cat,
 }
 .footer .footer__inner .btn svg.svg-arrow-right,
 .footer .footer__inner .gform_button_select_files svg.svg-arrow-right,
-.footer .footer__inner .ginput_container input[type=button] svg.svg-arrow-right,
-.footer .footer__inner .ginput_container textarea[type=button] svg.svg-arrow-right {
+.footer .footer__inner .ginput_container input[type="button"] svg.svg-arrow-right,
+.footer .footer__inner .ginput_container textarea[type="button"] svg.svg-arrow-right {
   height: 9px;
   position: relative;
   top: -1px;
@@ -20156,14 +20214,14 @@ body.dark .ar-work-cat,
   width: 50px;
 }
 .footer .footer__inner .align-items-center {
-  -webkit-box-align: center!important;
-      -ms-flex-align: center!important;
-          align-items: center!important;
+  -webkit-box-align: center !important;
+      -ms-flex-align: center !important;
+          align-items: center !important;
 }
 .footer .footer__inner .d-flex {
-  display: -webkit-box!important;
-  display: -ms-flexbox!important;
-  display: flex!important;
+  display: -webkit-box !important;
+  display: -ms-flexbox !important;
+  display: flex !important;
 }
 .footer .footer__inner .link__icon svg.svg-arrow-left,
 .footer .footer__inner .link__icon svg.svg-arrow-right {
@@ -20212,20 +20270,20 @@ body.dark .ar-work-cat,
     margin-top: 0.625rem !important;
   }
   .footer .footer__inner .d-xl-flex {
-    display: -webkit-box!important;
-    display: -ms-flexbox!important;
-    display: flex!important;
+    display: -webkit-box !important;
+    display: -ms-flexbox !important;
+    display: flex !important;
   }
   .footer .footer__inner .align-items-xl-center {
-    -webkit-box-align: center!important;
-        -ms-flex-align: center!important;
-            align-items: center!important;
+    -webkit-box-align: center !important;
+        -ms-flex-align: center !important;
+            align-items: center !important;
   }
   .footer .footer__inner .container {
     max-width: 1140px;
   }
   .footer .footer__inner .w-xl-100 {
-    width: 100%!important;
+    width: 100% !important;
   }
   .footer .footer__inner .offset-xl-1 {
     margin-left: 8.33333333%;
@@ -20242,12 +20300,12 @@ body.dark .ar-work-cat,
 }
 @media (min-width: 992px) {
   .footer .footer__inner .mb-lg-0 {
-    margin-bottom: 0!important;
+    margin-bottom: 0 !important;
   }
   .footer .footer__inner .order-lg-last {
-    -webkit-box-ordinal-group: 7!important;
-        -ms-flex-order: 6!important;
-            order: 6!important;
+    -webkit-box-ordinal-group: 7 !important;
+        -ms-flex-order: 6 !important;
+            order: 6 !important;
   }
   .footer .footer__inner .align-items-lg-end {
     -webkit-box-align: end !important;
@@ -20260,9 +20318,9 @@ body.dark .ar-work-cat,
             justify-content: flex-end !important;
   }
   .footer .footer__inner .d-lg-flex {
-    display: -webkit-box!important;
-    display: -ms-flexbox!important;
-    display: flex!important;
+    display: -webkit-box !important;
+    display: -ms-flexbox !important;
+    display: flex !important;
   }
   .footer .footer__inner .col-lg-4 {
     -webkit-box-flex: 0;
@@ -20273,20 +20331,25 @@ body.dark .ar-work-cat,
 }
 @media (min-width: 576px) {
   .footer .footer__inner .d-sm-flex {
-    display: -webkit-box!important;
-    display: -ms-flexbox!important;
-    display: flex!important;
+    display: -webkit-box !important;
+    display: -ms-flexbox !important;
+    display: flex !important;
   }
   .footer .footer__inner .align-items-sm-center {
-    -webkit-box-align: center!important;
-        -ms-flex-align: center!important;
-            align-items: center!important;
+    -webkit-box-align: center !important;
+        -ms-flex-align: center !important;
+            align-items: center !important;
   }
 }
 @media (min-width: 768px) {
   .footer .footer__inner .d-md-flex {
-    display: -webkit-box!important;
-    display: -ms-flexbox!important;
-    display: flex!important;
+    display: -webkit-box !important;
+    display: -ms-flexbox !important;
+    display: flex !important;
+  }
+}
+@media screen and (max-width: 768px) {
+  #footer .top-f {
+    text-align: center;
   }
 }
