--- a/assets/resources/styles/less/modules/_contact.less
+++ b/assets/resources/styles/less/modules/_contact.less
@@ -1274,6 +1274,7 @@ lack-strock .marquees__part {
     -webkit-box-align: start;
     -ms-flex-align: start;
     align-items: flex-start;
+    margin-bottom: 30px;
   }
   .mob-port
     .slider-element-container
