--- a/assets/resources/styles/less/modules/_portfolio.less
+++ b/assets/resources/styles/less/modules/_portfolio.less
@@ -2670,7 +2670,7 @@ ul.product-tags li a {
     margin-bottom: 0px;
   }
   section.section-container {
-    margin-bottom: 35px;
+    margin-bottom: 10%;
   }
   .c-col-8 {
     width: 100%;
