--- a/assets/resources/styles/less/modules/_about.less
+++ b/assets/resources/styles/less/modules/_about.less
@@ -24,6 +24,10 @@
   position: relative;
 }
 
+.about__marquee {
+  -webkit-text-stroke-color: #fff !important;
+}
+
 #abt > div > div > div.is-inview::before {
   width: 100%;
   transition: width 1s ease-out;
