--- a/assets/resources/styles/less/modules/_contact.less
+++ b/assets/resources/styles/less/modules/_contact.less
@@ -1317,15 +1317,16 @@ lack-strock .marquees__part {
     z-index: -1;
   }
   .lets .flex-row h1 {
-    font-size: 6em;
+    font-size: 6em !important;
     padding-left: 0;
     overflow: hidden;
     -webkit-perspective: 600px;
     perspective: 600px;
   }
   .lets .flex-row P {
-    font-size: 1.7em;
+    padding-left: 28% !important;
   }
+
   .web {
     display: none;
   }
@@ -2278,6 +2279,18 @@ body.dark .ar-work-cat,
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
+}
+
+@media screen and (max-width: 1180px) {
+  .lets .flex-row h1 {
+    font-size: 8em;
+    padding-left: 0;
+  }
+  .lets .flex-row P {
+    font-size: 1.6em;
+    padding-left: 35%;
+    letter-spacing: 2px;
+  }
 }
 
 @media screen and (min-width: 992px) {
