--- a/assets/resources/styles/less/modules/_portfolio.less
+++ b/assets/resources/styles/less/modules/_portfolio.less
@@ -2743,7 +2743,7 @@ ul.product-tags li a {
   }
 
   .apl-count {
-    font-size: 133px;
+    font-size: 133px !important;
     left: 50%;
     -webkit-transform: translateX(-50%);
     -ms-transform: translateX(-50%);
